force-app/main/default/objects/Account/fields/Finch_T_C__c.field-meta.xml
<CustomField>
    <fullName>Finch_T_C__c</fullName>
    <description>Date Finch Terms and Conditions were signed by client</description>
    <inlineHelpText>Date Finch Terms and Conditions were signed by client</inlineHelpText>
    <label>Finch T&amp;C</label>
    <type>Date</type>
</CustomField>