force-app/main/default/objects/Account/fields/Fiscal_Year_End_MMDD__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_End_MMDD__c</fullName>
    <formula>SUBSTITUTE(Fiscal_Year_End_PRKS__c, &quot;-&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year End (MMDD)</label>
    <type>Text</type>
</CustomField>