force-app/main/default/objects/Account/fields/Fiscal_Year_End_PRKS__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_End_PRKS__c</fullName>
    <description>Fiscal Year End in PRKS Format</description>
    <inlineHelpText>Fiscal Year End in PRKS Format</inlineHelpText>
    <label>Fiscal Year End PRKS</label>
    <length>8</length>
    <type>Text</type>
</CustomField>