force-app/main/default/objects/Account/fields/Forecast_Channel__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What Forecast Channel does this partner fall into?</description>
    <inlineHelpText>What Forecast Channel does this partner fall into?</inlineHelpText>
    <label>Forecast Channel</label>
    <referenceTo>Forecast_Channel__c</referenceTo>
    <relationshipLabel>Partners</relationshipLabel>
    <relationshipName>Partners</relationshipName>
    <type>Lookup</type>
</CustomField>