force-app/main/default/objects/Account/fields/Fund_List__c.field-meta.xml
<CustomField>
    <fullName>Fund_List__c</fullName>
    <label>Fund List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CensiblyYours</fullName>
            </value>
            <value>
                <fullName>Custom List</fullName>
            </value>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>Fidelity / Vanguard</fullName>
            </value>
            <value>
                <fullName>Fidelity Extended</fullName>
            </value>
            <value>
                <fullName>Fidelity Index</fullName>
            </value>
            <value>
                <fullName>FPR</fullName>
            </value>
            <value>
                <fullName>FPR ETF</fullName>
            </value>
            <value>
                <fullName>Globalt I-Shares</fullName>
            </value>
            <value>
                <fullName>Intuit Morningstar List</fullName>
            </value>
            <value>
                <fullName>JPM R2 SmartRetirement</fullName>
            </value>
            <value>
                <fullName>JPM R2 Smart Retirement Blend</fullName>
            </value>
            <value>
                <fullName>JPM R3 SmartRetirement</fullName>
            </value>
            <value>
                <fullName>JPM R3 Smart Retirement Blend</fullName>
            </value>
            <value>
                <fullName>JPM R4 SmartRetirement</fullName>
            </value>
            <value>
                <fullName>JPM R4 Smart Retirement Blend</fullName>
            </value>
            <value>
                <fullName>JPM R5 SmartRetirement</fullName>
            </value>
            <value>
                <fullName>JPM R5 Smart Retirement Blend</fullName>
            </value>
            <value>
                <fullName>JPM R6 SmartRetirement</fullName>
            </value>
            <value>
                <fullName>JPM R6 Smart Retirement Blend</fullName>
            </value>
            <value>
                <fullName>Loring Ward Custom Fund List</fullName>
            </value>
            <value>
                <fullName>Loring Ward  Plan B</fullName>
            </value>
            <value>
                <fullName>Matrix DFA Long List</fullName>
            </value>
            <value>
                <fullName>Matrix Reg Rep List Choice 50bps</fullName>
            </value>
            <value>
                <fullName>Matrix Reg Rep List Plus 75bps</fullName>
            </value>
            <value>
                <fullName>Matrix Reg Rep List Select 100bps</fullName>
            </value>
            <value>
                <fullName>Matrix RIA/Direct Fund List</fullName>
            </value>
            <value>
                <fullName>MML</fullName>
            </value>
            <value>
                <fullName>Morningstar 25 bps</fullName>
            </value>
            <value>
                <fullName>Morningstar 50 bps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>