force-app/main/default/objects/Account/fields/How_did_you_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_us__c</fullName>
    <label>How did you hear about us?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CNN Money</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Google_Test1</fullName>
            </value>
            <value>
                <fullName>News/Media</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payroll Company</fullName>
            </value>
            <value>
                <fullName>USA Today</fullName>
            </value>
            <value>
                <fullName>Yahoo!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>