force-app/main/default/objects/Account/fields/How_did_you_hear_about_us_details__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_us_details__c</fullName>
    <inlineHelpText>If prospect selected &apos;Other&apos; under &apos; How did you hear about us?&apos; and they entered in additional information, that information will appear here.</inlineHelpText>
    <label>&apos;Other&apos; detail</label>
    <type>TextArea</type>
</CustomField>