force-app/main/default/objects/Account/fields/Industry_NAICS__c.field-meta.xml
<CustomField>
    <fullName>Industry_NAICS__c</fullName>
    <formula>CASE( LEFT(NAICS_Code__c,2) , 
&quot;11&quot; , &quot;Ag Forestry Fishing&quot;, 
&quot;21&quot;, &quot;Mining Oil and Gas&quot;,
&quot;22&quot;, &quot;Utilities&quot;,
&quot;23&quot;, &quot;Construction&quot;,
&quot;31&quot;, &quot;Manufacturing&quot;,
&quot;32&quot;, &quot;Manufacturing&quot;,
&quot;33&quot;, &quot;Manufacturing&quot;,
&quot;42&quot;, &quot;Wholesale Trade&quot;,
&quot;44&quot;, &quot;Retail Trade&quot;,
&quot;45&quot;, &quot;Retail Trade&quot;,
&quot;48&quot;, &quot;Transportation&quot;,
&quot;49&quot;, &quot;Transportation&quot;,
&quot;51&quot;, &quot;Information&quot;,
&quot;52&quot;, &quot;Finance Insurance&quot;,
&quot;53&quot;, &quot;Real Estate&quot;,
&quot;54&quot;, &quot;Scientific Technical&quot;,
&quot;55&quot;, &quot;Management&quot;,
&quot;56&quot;, &quot;Waste Management&quot;,
&quot;61&quot;, &quot;Education&quot;,
&quot;62&quot;, &quot;Health Care&quot;,
&quot;71&quot;, &quot;Arts Entertainment&quot;,
&quot;72&quot;, &quot;Accommodation Food Services&quot;,
&quot;81&quot;, &quot;Other Services&quot;,
&quot;92&quot;, &quot;Public Admin&quot;,
&quot;99&quot;, &quot;Unclassified&quot;,

&quot;Blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry (NAICS)</label>
    <type>Text</type>
</CustomField>