force-app/main/default/objects/Account/fields/Integrated_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this partner or competitor offer integrated payroll services?</description>
    <inlineHelpText>Does this partner or competitor offer integrated payroll services?</inlineHelpText>
    <label>Integrated Payroll</label>
    <type>Checkbox</type>
</CustomField>