force-app/main/default/objects/Account/fields/Integration_Options_Received__c.field-meta.xml
<CustomField>
    <fullName>Integration_Options_Received__c</fullName>
    <label>Integration Options Received</label>
    <type>Date</type>
</CustomField>