force-app/main/default/objects/Account/fields/Integration_Options_Sent__c.field-meta.xml
<CustomField>
    <fullName>Integration_Options_Sent__c</fullName>
    <label>Integration Options Sent</label>
    <type>Date</type>
</CustomField>