force-app/main/default/objects/Account/fields/Integration_Setup_Complete__c.field-meta.xml
<CustomField>
    <fullName>Integration_Setup_Complete__c</fullName>
    <label>Integration Setup Complete</label>
    <type>Date</type>
</CustomField>