force-app/main/default/objects/Account/fields/Integration_Submissions__c.field-meta.xml
<CustomField>
    <fullName>Integration_Submissions__c</fullName>
    <label>Integration Submissions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Census</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Deferrals</fullName>
            </value>
            <value>
                <fullName>Loan Repayments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>