force-app/main/default/objects/Account/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>180</fullName>
            </value>
            <value>
                <fullName>180 - Limited</fullName>
            </value>
            <value>
                <fullName>360</fullName>
            </value>
            <value>
                <fullName>360 - Limited</fullName>
            </value>
            <value>
                <fullName>360 - Return File Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>