force-app/main/default/objects/Account/fields/Interested_After_Aborting_Finch_Cred__c.field-meta.xml
<CustomField>
    <fullName>Interested_After_Aborting_Finch_Cred__c</fullName>
    <description>Client initially expressed interest in Finch but abandoned process during setup</description>
    <inlineHelpText>Client initially expressed interest in Finch but abandoned process during setup</inlineHelpText>
    <label>Interested After Aborting Finch Cred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>