force-app/main/default/objects/Account/fields/Investment_selection__c.field-meta.xml
<CustomField>
    <fullName>Investment_selection__c</fullName>
    <label>Investment selection</label>
    <type>TextArea</type>
</CustomField>