force-app/main/default/objects/Account/fields/Investments__c.field-meta.xml
<CustomField>
    <fullName>Investments__c</fullName>
    <inlineHelpText>This information will come in from the Find the Right Plan Tool.  Can be manually overwritten.</inlineHelpText>
    <label>Investments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>