force-app/main/default/objects/Account/fields/Invoices_Paid_Since_2018__c.field-meta.xml
<CustomField>
    <fullName>Invoices_Paid_Since_2018__c</fullName>
    <description>Total invoices paid since 2018</description>
    <inlineHelpText>Total invoices paid since 2018</inlineHelpText>
    <label>Invoices Paid Since 2018</label>
    <summarizedField>Invoice__c.Amount_Paid__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>equals</operation>
        <value>Paid In Full</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>