force-app/main/default/objects/Account/fields/Knows_Rep__c.field-meta.xml
<CustomField>
    <fullName>Knows_Rep__c</fullName>
    <description>Does the client know who their designated service representative is?</description>
    <inlineHelpText>Does the client know who their designated service representative is?</inlineHelpText>
    <label>Knows Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>