force-app/main/default/objects/Account/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <label>Last Activity Date - DEPRECATED</label>
    <type>Date</type>
</CustomField>