force-app/main/default/objects/Account/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <description>Date of most recent payment</description>
    <inlineHelpText>Date of most recent payment</inlineHelpText>
    <label>Last Payment Date</label>
    <summarizedField>Invoice__c.Payment_Date__c</summarizedField>
    <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>