force-app/main/default/objects/Account/fields/Last_Referral_Given__c.field-meta.xml
<CustomField>
    <fullName>Last_Referral_Given__c</fullName>
    <description>Date Last Lead was referred by account.</description>
    <inlineHelpText>Date Last Lead was referred by account.</inlineHelpText>
    <label>Last Referral Given</label>
    <type>Date</type>
</CustomField>