force-app/main/default/objects/Account/fields/Last_Shopped_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Shopped_By__c</fullName>
    <description>Name a individual who last shopped competitor on Ubiquity&apos;s behalf</description>
    <inlineHelpText>Name a individual who last shopped competitor on Ubiquity&apos;s behalf</inlineHelpText>
    <label>Last Shopped By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>