force-app/main/default/objects/Account/fields/Linked_Company__c.field-meta.xml
<CustomField>
    <fullName>Linked_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be used when companies are linked through ownership like control groups, etc.</description>
    <inlineHelpText>To be used when companies are linked through ownership like control groups, etc.</inlineHelpText>
    <label>Linked Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Linked Company)</relationshipLabel>
    <relationshipName>Linked_Company</relationshipName>
    <type>Lookup</type>
</CustomField>