force-app/main/default/objects/Account/fields/LLC_Taxed_As_PRKS__c.field-meta.xml
<CustomField>
    <fullName>LLC_Taxed_As_PRKS__c</fullName>
    <description>Business Entity Taxed As input from Paradigm</description>
    <inlineHelpText>Business Entity Taxed As input from Paradigm</inlineHelpText>
    <label>LLC Taxed As PRKS</label>
    <length>24</length>
    <type>Text</type>
</CustomField>