force-app/main/default/objects/Account/fields/Major_Partner__c.field-meta.xml
<CustomField>
    <fullName>Major_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Major Partner</label>
    <type>Checkbox</type>
</CustomField>