force-app/main/default/objects/Account/fields/Master_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Account_Name__c</fullName>
    <formula>IF(ISBLANK(Parent.Name), Name,
IF(ISBLANK(Parent.Parent.Name), Parent.Name,
IF(ISBLANK(Parent.Parent.Parent.Name), Parent.Parent.Name,
IF(ISBLANK(Parent.Parent.Parent.Parent.Name), Parent.Parent.Parent.Name,
IF(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name), Parent.Parent.Parent.Parent.Name,
IF(ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Name), Parent.Parent.Parent.Parent.Parent.Name,
IF(ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name), Parent.Parent.Parent.Parent.Parent.Parent.Name,
&quot;Too Many Parents&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Account Name</label>
    <type>Text</type>
</CustomField>