force-app/main/default/objects/Account/fields/Matrix_07C_Account__c.field-meta.xml
<CustomField>
    <fullName>Matrix_07C_Account__c</fullName>
    <description>Completed by Implementations team before implementation was completed</description>
    <inlineHelpText>Completed by Implementations team before implementation was completed</inlineHelpText>
    <label>Matrix 07C Account #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>