force-app/main/default/objects/Account/fields/Message_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Message_from_Lead__c</fullName>
    <description>The notes in this box come directly from the lead when they submit their contact information on the Starter(k) quote page.</description>
    <inlineHelpText>The notes in this box come directly from the lead when they submit their contact information on the Starter(k) quote page.</inlineHelpText>
    <label>Message from Lead</label>
    <type>TextArea</type>
</CustomField>