force-app/main/default/objects/Account/fields/Most_Recent_Fee_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Fee_Waiver__c</fullName>
    <inlineHelpText>Date of last fee waiver</inlineHelpText>
    <label>Most Recent Fee Waiver</label>
    <summarizedField>Fee_Waiver__c.Date__c</summarizedField>
    <summaryFilterItems>
        <field>Fee_Waiver__c.Fee_Waiver_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Fee_Waiver__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>