force-app/main/default/objects/Account/fields/Motivation_to_Partner_with_Ubiquity__c.field-meta.xml
<CustomField>
    <fullName>Motivation_to_Partner_with_Ubiquity__c</fullName>
    <description>What is motivating or will motivate this partner to enter a partnership with Ubiquity?</description>
    <inlineHelpText>What is motivating or will motivate this partner to enter a partnership with Ubiquity?</inlineHelpText>
    <label>Motivation to Partner with Ubiquity</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>