force-app/main/default/objects/Account/fields/Multiple_Business__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Business__c</fullName>
    <inlineHelpText>This information will come in from the Find the Right Plan Tool.  Can be manually overwritten.</inlineHelpText>
    <label>Multiple Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>