force-app/main/default/objects/Account/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <label>NAICS Code (Business Code)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>