force-app/main/default/objects/Account/fields/NetSuite_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Sync_Error__c</fullName>
    <description>Used by the Jitterbit Account/Customer integration with NetSuite. Holds any sync errors encountered during the integration.</description>
    <label>NetSuite Sync Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>