force-app/main/default/objects/Account/fields/New_Comp__c.field-meta.xml
<CustomField>
    <fullName>New_Comp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This plan has the New Comparability feature.</description>
    <inlineHelpText>This field should be checked if the plan has selected the New Comparability feature.</inlineHelpText>
    <label>New Comp</label>
    <type>Checkbox</type>
</CustomField>