force-app/main/default/objects/Account/fields/NPS_Average__c.field-meta.xml
<CustomField>
    <fullName>NPS_Average__c</fullName>
    <description>The average NPS score from the past 6 months.</description>
    <inlineHelpText>The average NPS score from the past 6 months.</inlineHelpText>
    <label>NPS Average</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>