force-app/main/default/objects/Account/fields/of_Add_On_Products__c.field-meta.xml
<CustomField>
    <fullName>of_Add_On_Products__c</fullName>
    <label># of Add On Products</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>