force-app/main/default/objects/Account/fields/of_Current_Plans__c.field-meta.xml
<CustomField>
    <fullName>of_Current_Plans__c</fullName>
    <label># of Current Plans</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>