force-app/main/default/objects/Account/fields/Offered_Finch__c.field-meta.xml
<CustomField>
    <fullName>Offered_Finch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is client presented finch as an option in onboarding workflow</description>
    <inlineHelpText>Is client presented finch as an option in onboarding workflow</inlineHelpText>
    <label>Offered Finch</label>
    <type>Checkbox</type>
</CustomField>