force-app/main/default/objects/Account/fields/Ongoing_Service_Issues__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Service_Issues__c</fullName>
    <inlineHelpText>select whether there are ongoing service issues</inlineHelpText>
    <label>Ongoing Service Issues</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>