force-app/main/default/objects/Account/fields/Other_Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Other_Payroll_Provider__c</fullName>
    <label>Other Payroll Provider (write in)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>