force-app/main/default/objects/Account/fields/Parent_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Owner__c</fullName>
    <description>Used for reporting</description>
    <formula>Parent.Owner.FirstName + &quot; &quot; +  Parent.Owner.LastName</formula>
    <inlineHelpText>Used for reporting</inlineHelpText>
    <label>Parent Account Owner</label>
    <type>Text</type>
</CustomField>