force-app/main/default/objects/Account/fields/Participant_Fee__c.field-meta.xml
<CustomField>
    <fullName>Participant_Fee__c</fullName>
    <description>Use annualized amount.</description>
    <inlineHelpText>Use annualized amount.</inlineHelpText>
    <label>Participant Fee</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>