force-app/main/default/objects/Account/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, show the partner details fields on the account page</description>
    <inlineHelpText>Check this box if the account is a partner</inlineHelpText>
    <label>Partner</label>
    <type>Checkbox</type>
</CustomField>