force-app/main/default/objects/Account/fields/Partner_Classification__c.field-meta.xml
<CustomField>
    <fullName>Partner_Classification__c</fullName>
    <inlineHelpText>TERRITORY: Small accounts operating only within a defined territory.
GROWTH: Accounts with national presence and ability to sell nationwide. BD Manages full relationship until account grows into Strategic.
STRATEGIC: Large national accounts with significant sales potential. Requires BD support at both national and regional levels.</inlineHelpText>
    <label>Partner Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Territory</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>