force-app/main/default/objects/Account/fields/Partner_Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Integration_Type__c</fullName>
    <description>What type of integration(s) does the partner have with Ubiquity?</description>
    <inlineHelpText>What type of integration(s) does the partner have with Ubiquity?</inlineHelpText>
    <label>Partner Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>API - Census &amp; Payroll</fullName>
            </value>
            <value>
                <fullName>SFTP - Census &amp; Payroll</fullName>
            </value>
            <value>
                <fullName>Provider Submission - Census &amp; Payroll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>