force-app/main/default/objects/Account/fields/Partner_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Partner_Landing_Page__c</fullName>
    <description>Link to a partner&apos;s landing page.  Used by Biz dev</description>
    <label>Partner Landing Page</label>
    <type>Url</type>
</CustomField>