force-app/main/default/objects/Account/fields/Partner_Landing_Page_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Landing_Page_Code__c</fullName>
    <description>Code used to connect this account to new leads created through calendly</description>
    <inlineHelpText>A unique code used by Calendly to connect new leads with this account</inlineHelpText>
    <label>Partner Landing Page Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>