force-app/main/default/objects/Account/fields/Partner_Resource_Center__c.field-meta.xml
<CustomField>
    <fullName>Partner_Resource_Center__c</fullName>
    <description>Link to a partner&apos;s resource center.  Used by Biz dev</description>
    <label>Partner Resource Center</label>
    <type>Url</type>
</CustomField>