force-app/main/default/objects/Account/fields/Partner_Starter_Guide__c.field-meta.xml
<CustomField>
    <fullName>Partner_Starter_Guide__c</fullName>
    <description>Link to a partner&apos;s &quot;Starter Guide&quot; page.  Used by biz dev</description>
    <label>Partner Starter Guide</label>
    <type>Url</type>
</CustomField>