force-app/main/default/objects/Account/fields/Partner_Training_Complete__c.field-meta.xml
<CustomField>
    <fullName>Partner_Training_Complete__c</fullName>
    <label>Partner Training Complete</label>
    <type>Date</type>
</CustomField>