force-app/main/default/objects/Account/fields/Partner_Training_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Partner_Training_Scheduled__c</fullName>
    <label>Partner Training Scheduled</label>
    <type>Date</type>
</CustomField>