force-app/main/default/objects/Account/fields/Partner_User_Registered__c.field-meta.xml
<CustomField>
    <fullName>Partner_User_Registered__c</fullName>
    <label>Partner User Registered</label>
    <type>Date</type>
</CustomField>